# sonarGraph

SonarGraphs/: CMakeLists.txt  main.cpp  resources.qrc
SonarGraphs/qml/: Theme.qml  main.qml
SonarGraphs/qml/Components/: AmplitudeGraph.qml  DataReceiver.qml  DataReceiverWaterfall.qml  Menu.qml
